# treesmith

./: .gitattributes  CONTRIBUTING.md  Cargo.toml  DESIGN.md  LICENSE-MIT  README.md  treesmith-architecture-spec.md
.github/workflows/: ci.yml
crates/treesmith-cli/: Cargo.toml
crates/treesmith-cli/src/: human.rs  lib.rs
crates/treesmith-format/: Cargo.toml
crates/treesmith-format/src/: census.rs  item.rs  lib.rs  rainbow.rs  scs.rs  valuefmt.rs  yaml.rs
crates/treesmith-format/tests/: corpus_roundtrip.rs
crates/treesmith-gate/: Cargo.toml
crates/treesmith-gate/src/: gates.rs  lib.rs
crates/treesmith-gate/tests/: gates.rs
crates/treesmith-graph/: Cargo.toml
crates/treesmith-graph/src/: lib.rs  query.rs  tests.rs
crates/treesmith-kernel/: Cargo.toml
crates/treesmith-kernel/src/: error.rs  lib.rs  shapes.rs  write.rs
crates/treesmith-kernel/tests/: kernel.rs
crates/treesmith-mcp/: Cargo.toml
crates/treesmith-mcp/src/: lib.rs  protocol.rs  tools.rs
crates/treesmith-presentation/: Cargo.toml
crates/treesmith-presentation/src/: codemap.rs  delta.rs  layoutxml.rs  lib.rs
crates/treesmith-presentation/tests/: resolve_fixtures.rs
crates/treesmith-template/: Cargo.toml
crates/treesmith-template/src/: lib.rs
crates/treesmith-template/tests/: template_tests.rs
crates/treesmith-types/: Cargo.toml
crates/treesmith-types/src/: lib.rs  wellknown.rs
docs/: architecture.md  cli.md  formats.md  gates.md  mcp.md
fixtures/corpus/: backslash-block.yml  bare-key.yml  block-headers.yml  block-interior-blank.yml  bom-crlf-trailing-blank.yml  bom.yml  braced-guid-value.yml  crlf.yml  empty-quoted.yml  multilist-versions.yml  no-trailing-newline.yml  plain-colon-space.yml  quoted-values.yml  trailing-space-value.yml  type-before-hint.yml  unknown-keys.yml
fixtures/rainbow/: README.md
fixtures/rainbow/basic/serialization/content/: Home.yml
fixtures/rainbow/basic/serialization/content/Home/: About.yml  Data.yml
fixtures/rainbow/basic/serialization/content/Home/Data/: HeroData.yml
fixtures/rainbow/basic/serialization/layout/: Hero.yml  MainLayout.yml  NavBar.yml  PromoBanner.yml
fixtures/rainbow/basic/serialization/templates/: Sample.yml
fixtures/rainbow/basic/serialization/templates/Sample/: ArticlePage.yml  Meta.yml  Page.yml
fixtures/rainbow/basic/serialization/templates/Sample/Meta/: SEO.yml
fixtures/rainbow/basic/serialization/templates/Sample/Meta/SEO/: Keywords.yml
fixtures/rainbow/basic/serialization/templates/Sample/Page/: Content.yml  __Standard Values.yml
fixtures/rainbow/basic/serialization/templates/Sample/Page/Content/: Body.yml  NavTitle.yml  RelatedPages.yml  Title.yml
fixtures/rainbow/basic/src/Controllers/: NavBarController.cs
fixtures/rainbow/basic/src/Views/: Hero.cshtml  PromoBanner.cshtml
fixtures/rainbow/basic/src/Views/Shared/: MainLayout.cshtml
fixtures/rainbow/broken/: treesmith.toml
fixtures/rainbow/broken/serialization/content/: Alpha.yml  Bravo.yml  Charlie.yml  Dee.yml  Echo.yml  Foxtrot.yml  Golf.yml
fixtures/rainbow/broken/serialization/layout/: BrokenView.yml  SideView.yml  SimpleLayout.yml
fixtures/rainbow/broken/serialization/templates/: Simple.yml
fixtures/rainbow/broken/serialization/templates/Simple/: Data.yml  __Standard Values.yml
fixtures/rainbow/broken/serialization/templates/Simple/Data/: Link.yml  Title.yml
fixtures/rainbow/broken/src/Views/: Side.cshtml  SimpleLayout.cshtml
src/: main.rs
tests/: cli_integration.rs  mcp_integration.rs
