[package]
name = "treesmith-mcp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license = "MIT OR Apache-2.0"

[dependencies]
treesmith-kernel = { workspace = true }
serde_json = { workspace = true }
notify = { workspace = true }
thiserror = { workspace = true }
